Fix overlapping UI elements

--- a/Code/UI/HUD/Components/Spectating.razor.scss
+++ b/Code/UI/HUD/Components/Spectating.razor.scss
@@ -3,6 +3,8 @@
     position: absolute;
     top: 128px;
 
+    z-index: 50;
+
     span
     {
         label
